--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -151,7 +151,6 @@
             var isAndroid = userAgent.indexOf('Android') > -1 || userAgent.indexOf('Linux') > -1; //android终端或者uc浏览器
             var isiOS = !!userAgent.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
             var isiPad = !!userAgent.match(/iPad/i);//ipad终端
-            var isQQ = !!ua.match(/QQ\/[0-9]/i);//是否为QQ
             if(userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger'){
                 document.body.addEventListener('touchmove', function (e) {
                     e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
@@ -167,7 +166,7 @@
                             window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
                         },10);
                     } else {
-                        if (isQQ) {
+                        if (ua.match(/QQ/i) == "qq") {
                             alert("是QQ内置浏览器");
                             $('a').attr('href','zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=');
                             setTimeout(function () {
