--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -125,8 +125,7 @@
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
             <span id="bottom_span">请在智学网APP内完成练习</span>
-            <!--v-on:click="openApp"-->
-            <a><button id="bottom_btn">打开应用</button></a>
+            <a><button id="bottom_btn" v-on:click="openApp">打开应用</button></a>
         </div>
     </div>
 </div>
