--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -117,7 +117,7 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第三过电饭锅的步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第fd 三过电饭锅的步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
@@ -206,7 +206,8 @@
                     setTimeout(function () {
                         document.body.removeChild(ifr);
                         $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
-                    },10)
+                    },10);
+                    $('a').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
                 }
             }
         });
