--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -117,7 +117,7 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第fd、的步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第fdfdos的步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
@@ -211,7 +211,10 @@
                                 null;
                     var visibilityChangeEvent = hiddenProperty.replace(/hidden/i, 'visibilitychange');
                     var onVisibilityChange = function() {
-                        if (document[hiddenProperty]) {
+                        if (!document[hiddenProperty]) {
+                            console.log('获得焦点');
+                            isBlur = false;
+                        } else {
                             console.log('失去焦点');
                             isBlur = true;
                         }
