--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -117,7 +117,7 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第fd步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第fdsdfwd步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
@@ -161,19 +161,6 @@
                 fallback: 'https://a.app.qq.com/o/simple.jsp?pkgname=com.zihexin',//唤起应用失败，未安装时跳转到应用宝地址
             };
             const callLib = new CallApp(options);
-            var clipboard = new Clipboard('#bodyBar');
-            clipboard.on('success', function(e) {
-                e.clearSelection();
-            });
-
-            clipboard.on('error', function(e) {
-
-            });
-            function copydata(){
-                var url = window.location;
-                $('#bodyBar').attr('data-clipboard-text',url);
-                callLib.open({path:''})
-            }
         });
     });
 </script>
