--- a/sharehomework/sharehomeworkinfo.html
+++ b/sharehomework/sharehomeworkinfo.html
@@ -65,6 +65,9 @@
     <img id="share_rightIcon" src="./image/share_rightIcon@2x.png" alt=""/>
     <!--作业内容-->
     <div id="backview">
+        <div>
+
+        </div>
         <div id="share_hworkInfo" v-if="isRequestSuccess">
             <div id="hworkInfo_hwTitle_div">
                 <span id="hworkInfo_hwTitle">{{ hwTitle }}</span>
@@ -118,14 +121,14 @@
                 <span class="step_span_tip">第二步：使用学生智学网账号密码登录；</span>
             </div>
             <div class="step_div_tip">
-                <span class="step_span_tip">第三步：在首页点击“练习中心”查看练习。</span>
+                <span class="step_span_tip">第三电饭锅等方式步：在首页点击“练习中心”查看练习。</span>
             </div>
         </div>
         <!--空白容器-->
         <div id="share_tipBackview"></div>
         <div id="share_bottom">
             <span id="bottom_span">请在智学网APP内完成练习</span>
-            <a><button id="bottom_btn" v-on:click="openApp">打开应用</button></a>
+            <a id="clickApp"><button id="bottom_btn" v-on:click="openApp">打开应用</button></a>
         </div>
     </div>
 </div>
@@ -144,17 +147,57 @@
 <script src="js/index.js"></script>
 <script type="text/javascript">
     $(function () {
-        var leaveApp = false;
-        document.addEventListener('visibilitychange', function() {
-            if(document.hidden){ //页面不可见状态
-                leaveApp = true;
-            } else { //页面可见状态
-                leaveApp = false;
+        var userAgent = navigator.userAgent, appVersion = navigator.appVersion;
+        var isAndroid = userAgent.indexOf('Android') > -1 || userAgent.indexOf('Linux') > -1; //android终端或者uc浏览器
+        var isiOS = !!userAgent.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+        var isWeiXin = (userAgent.toLowerCase().match(/MicroMessenger/i) == 'micromessenger');
+        if (!isWeiXin) {
+            openApp();
+        }
+        //点击打开应用
+        $('#clickApp').click(function () {
+            alert('打开应用')
+            if (isWeiXin) {
+                document.body.addEventListener('touchmove', function (e) {
+                    e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+                }, {passive: false});
+                $('#coverBackview').css('display','block');
+            } else {
+                openApp();
             }
         });
-        $('a').click(function () {
-            location.href = 'zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=';
+
+        //下载应用
+        $("#downloadApp").click(function () {
+            if (isWeiXin) {
+                document.body.addEventListener('touchmove', function (e) {
+                    e.preventDefault(); //阻止默认的处理方式(阻止下拉滑动的效果)
+                }, {passive: false});
+                $('#coverBackview').css('display','block');
+            } else {
+                downLoadApp();
+            }
         });
+
+        function openApp() {
+            if (isiOS) {
+                window.location.href = "zhixue://www.zhixue.com?internalLink=JTdCJTIycHJvZHVjdFBhcmFtcyUyMiUzQSU3QiUyMm1vZHVsZSUyMiUzQSUyMmh3bGlzdF91bmZpbmlzaGVkJTIyJTdEJTJDJTIycHJvZHVjdFRhZyUyMiUzQSUyMnp5englMjIlN0Q=";
+            } else {
+                var ifr = document.createElement('iframe');
+                ifr.src = "zhixue://app.zhixue.com?internalLink=eydwcm9kdWN0VGFnJzonenl6eCcsJ3Byb2R1Y3RQYXJhbXMnOnsnbW9kdWxlJzonenl6eCd9fQo=";
+                ifr.style.display = 'none';
+                document.body.appendChild(ifr);
+                document.body.removeChild(ifr);
+            }
+        }
+
+        function downLoadApp() {
+            if (isiOS) {
+                window.location.href = "https://itunes.apple.com/cn/app/智学网-让学习更简单/id981030648?mt=8";
+            } else {
+                $('#downloadApp').attr('href','http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.elpmobile.smartlearning');
+            }
+        }
     });
 </script>
 
